Fixed: vertical-align for block in double small.

--- a/client/block/ground/css/type_block/_main.sass
+++ b/client/block/ground/css/type_block/_main.sass
@@ -24,6 +24,7 @@
 
     .block-content
       display: inline-block
+      vertical-align: top
 
     .block-content:first-child
       margin-right: 0
