--- a/client/static/compress/bundle.css
+++ b/client/static/compress/bundle.css
@@ -1629,7 +1629,8 @@ img {
   font-size: 0; }
 
 .ground-block.DOUBLE_SMALL .block-content, .ground-block.DOUBLE_SMALL .block-content-message {
-  display: inline-block; }
+  display: inline-block;
+  vertical-align: top; }
 
 .ground-block.DOUBLE_SMALL .block-content:first-child, .ground-block.DOUBLE_SMALL .block-content-message:first-child {
   margin-right: 0; }
